test/end-to-end/compile-errors/with-else.crow
main nat(_ string[])
	_ void future = with : parallel
		info log "inner"
	else
		info log "else"
